miniextendr-macros/tests/ui/r_macro_empty_call_arg.rs
//! Test: r! rejects an empty (non-trailing) function call argument.

use miniextendr_macros::r;

fn main() {
    let _ = r!(f(, 1));
}
